# PEMOIN-Thesis

./: .gitignore  ARCHITECTURE.md  README.md  aggregate_unity_pemoin_experiments.py  backfill_experiment_storyboards.py  compare_unity_pemoin_runs.py  make_video_from_frames.py  pemoin.py  pyproject.toml  rerun_unity_pemoin_experiments.py  suncompass_test.py  test.py
carla_scripts/: carla_label_map_dump.json  carla_label_map_dump.py  export_carla_dataset.py  set_map.py  simple_rgb.py  start_carla.py  viz_road_mask.py
config/: da3_streaming_low_vram.yaml  profiles.json
docs/: blender-scene.md  data-contract.md  design-roadmap.md  geometry-reference.md  integrations.md  profile-reference.md  system-overview.md  test.drawio  validation.md
tests/: test_alignment_plane_first.py  test_alignment_settings.py  test_animation_timing.py  test_blender_scene_depth_decode.py  test_blender_scene_grounding_policy.py  test_blender_scene_modularization.py  test_blender_scene_refactor.py  test_blender_scene_render_outputs.py  test_blender_scene_shadow_extract.py  test_camera_calibration.py  test_camera_height_provider.py  test_camera_model.py  test_carla_gt_lighting.py  test_cli_frame_provider.py  test_comparison_frame_config.py  test_comparison_frame_gravity_prior.py  test_cross_run_cache.py  test_depth_stabilization.py  test_dpvo_adapter.py  test_dpvo_demo_match_graph.py  test_dpvo_runner_env.py  test_env_launcher_selection.py  test_geometry_consistency_validation.py  test_geometry_validation_camera_height.py  test_geometry_validation_depth.py  test_geometry_validation_intrinsics.py  (+35 more)
(+178 files in other folders)
